--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
     "phpstan/extension-installer": "^1.3.1",
     "phpstan/phpstan": "^1.10.33",
     "bitexpert/phpstan-magento": "^0.30.0",
-    "magento/magento-coding-standard": "^31"
+    "magento/magento-coding-standard": "^31",
+    "php-coveralls/php-coveralls": "^2.7"
     },
   "autoload": {
     "files": [
